@@ -29,11 +29,12 @@
                 android:text="@string/addcommand_commandIDDefault"
                 android:visibility="visible"/>
 
-        <TextView
-                android:layout_width="fill_parent"
+        <CheckBox
+                android:id="@+id/addcommand_useCommandName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="@string/addcommand_commandName"/>
+                android:checked="true"
+                android:text="@string/addcommand_useCommandName"/>
 
         <EditText
                 android:id="@+id/addcommand_commandName"
